# Crane

./: Cargo.toml  LICENSE  README.md  build.rs  dist-workspace.toml
.github/workflows/: release.yml
fonts/: icons.toml
src/: config.rs  fetcher.rs  icon.rs  lerp.rs  main.rs  message.rs  utils.rs  worker.rs
src/components/: bottom_bar.rs  crate_items.rs  git_modal.rs  logs.rs  mod.rs  modal.rs  progress.rs
