[package]
name = "Crane"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
iced = { git = "https://github.com/iced-rs/iced", features = [
    "tokio",
], rev = "0b78f2aa5d0a741da79f3b2b0a91046c32587403" }
log = "0.4.28"
pretty_env_logger = "0.5.0"
semver = "1.0.27"
serde = "1.0.228"
serde_json = "1.0.145"
reqwest = "0.12.24"
tokio = { version = "1.47.2", features = ["rt-multi-thread"] }
crates_io_api = { version = "0.12.0", default-features = false, features = [
    "rustls",
] }

[build-dependencies]
iced_fontello = "0.13"
