[package]
name = "crane"
version = "0.1.0"
edition = "2024"
authors = ["TheRustyPickle <rusty.pickle94@gmail.com>"]
readme = "README.md"
description = """
On-demand Telegram chat analytic generator
"""
homepage = "https://github.com/TheRustyPickle/Crane"
repository = "https://github.com/TheRustyPickle/Crane"
license = "MIT"

[dependencies]
dirs = "6.0.0"
iced = { git = "https://github.com/iced-rs/iced", features = [
    "tokio",
    "sipper",
], rev = "0b78f2aa5d0a741da79f3b2b0a91046c32587403" }
log = "0.4.28"
pretty_env_logger = "0.5.0"
semver = "1.0.27"
serde = "1.0.228"
serde_json = "1.0.145"
reqwest = "0.12.24"
tokio = { version = "1.47.2", features = ["rt-multi-thread", "process"] }
crates_io_api = { version = "0.12.0", default-features = false, features = [
    "rustls",
] }
sipper = "0.1.0"

[build-dependencies]
iced_fontello = "0.13"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
