[package]
name = "crane-ui"
version = "1.0.0"
edition = "2024"
description = """
On-demand Telegram chat analytic generator
"""
readme = "README.md"
homepage = "https://github.com/TheRustyPickle/Crane"
repository = "https://github.com/TheRustyPickle/Crane"
license = "MIT"

[[bin]]
bench = false
name = "crane"
path = "src/main.rs"
test = false

[dependencies]
crates_io_api = { version = "0.12.0", default-features = false, features = [
  "rustls",
] }
dirs = "6.0.0"
iced = { git = "https://github.com/iced-rs/iced", rev = "36b6ed0aec85fb01afbb63b4f48afa7763487967", features = [
  "sipper",
  "tokio",
] }
log = "0.4.28"
open = "5.3.5"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.13.4", features = ["json"] }
semver = "1.0.28"
serde = "1.0.228"
serde_json = "1.0.150"
sipper = "0.1.0"
tokio = { version = "1.52.3", features = ["process", "rt-multi-thread"] }

[build-dependencies]
iced_fontello = "0.14.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
